<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".MainActivity">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/distancia"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_de_kil_metros"
            android:layout_gravity="center"
    />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/preco"
            android:layout_marginTop="32dp"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preco"
            android:layout_gravity="center"
    />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/autonomia"
            android:layout_marginTop="32dp"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/km_por_litro"
            android:layout_gravity="center"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:text="@string/seu_gasto_total_ser_de"
            android:layout_gravity="center"
            android:textSize="18sp"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="R$ 0"
            android:textColor="@color/darkBlue"
            android:layout_gravity="center"
            android:textSize="28sp"
    />

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="28dp"
            android:text="@string/calcular"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@color/lightGreen"

    />

</LinearLayout>